force-app/main/default/objects/custom_create285__c/custom_create285__c.object-meta.xml
<CustomObject>
    <label>Custom created object285</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects285</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>