force-app/main/default/objects/custom_create285__c/fields/custom_create_285field610__c.field-meta.xml
<CustomField>
    <fullName>custom_create_285field610__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 285field610</label>
    <type>Checkbox</type>
</CustomField>