force-app/main/default/objects/custom_create285__c/fields/custom_create_285field626__c.field-meta.xml
<CustomField>
    <fullName>custom_create_285field626__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 285field626</label>
    <type>Checkbox</type>
</CustomField>